--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "nwd-react",
   "version": "0.1.0",
   "private": true,
-   "proxy": "http://127.0.0.1:3001",
+  "proxy": "http://127.0.0.1:3001",
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -17,6 +17,7 @@
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.1.3",
+    "crypto-js": "^4.1.1",
     "d3": "^7.4.4",
     "dataformat": "^1.0.0",
     "date-fns": "^2.28.0",
@@ -29,17 +30,21 @@
     "framer-motion": "^6.3.3",
     "jquery": "^3.6.0",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.3.2",
     "node": "^17.7.2",
     "react": "^18.1.0",
     "react-animations": "^1.0.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-ga": "^3.3.1",
+    "react-helmet": "^6.1.0",
     "react-markdown": "^8.0.3",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.12.0",
+    "react-youtube": "^10.0.0",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.1",
